<resources>
    <string name="app_name">DinDrikkeLek</string>
    <string name="nav_spill">Spill</string>
    <string name="nav_Endreleker">Endre/Legg til</string>
    <string name="nav_bilder">Bildebibliotek</string>
    <string name="nav_instillinger">Instillinger</string>
    <string name="nav_help">Hjelp</string>
    <string name="nav_support">Brukerstøtte</string>
    <string name="toolbar_menu_hamburger">Meny</string>
    <string name="legg_til_twist">Legg til/Slett Twist</string>
    <string name="endre_twist">Endre Twist</string>
    <string name="fjern_twist">Fjern Twist</string>
    <string name="legg_til_bilde">Legg til bilde</string>
    <string name="bilde">Bilde</string>
    <string name="bildetittel">Bildetittel</string>
    <string name="galleri">Galleri</string>
    <string name="kamera">Kamera</string>
    <string name="tilbake">Tilbake</string>
    <string name="lagre">Lagre</string>
    <string name="TrykkForSpill">Trykk hvor som helst for å begynne!</string>
    <string name="lagreTwist">Lagre</string>
    <string name="legg_til_navn">Skriv inn twisten din her</string>
    <string name="legg_til_beskrivelse">Legg til beskrivelse</string>
    <string name="SpillLek">Spill!</string>
    <string name="ConfirmedDelete">Alle twister er nå slettet.</string>
    <string name="ConfirmedDeleteBilder">Alle Bilder er nå slettet.</string>
    <string name="FAQTittel">FAQ</string>
    <string name="leggTilLek">Legg til lek</string>
    <string name="faq_spm">Hvordan fungerer Dindrikkelek?\n\nDindrikkelek lar deg lage helt egne drikkeleker med egne Twister!\n\n\nHva er en Twist?\n\nEn Twist er hva enn du vil det skal være. Det er dine egne utfall ut ifra lekene i spillet. Ved å legge til Twist, legger du til nye regler i spillene!</string>
    <string name="TrykkHvorSomHelstSpill">Trykk hvor som helst på skjermen for å starte spillet! </string>
    <string name="DeleteInfo">For å slette en Twist, velg utfall/Twist fra lista og hold inne i to sekunder.</string>
    <string name="ConfirmedDeleteLeker">Alle leker er nå slettet</string>
    <string name="ConfirmedDeleteTwists">Alle twister er nå slettet</string>
    <string name="ErrorGame">Kan ikke kjøre spillet. Mangler enten leker eller utfall</string>
    <string name="ErrorPic">Kan ikke lagre bilde. Kan hende det ikke finnes utfall/twist å knytte det til</string>
    <string name="PicAdded">Bilde lagret!</string>
    <string name="PickNotAdded">Bilde ble ikke lagret. Noe gikk galt</string>
    <string name="BildeTittel">Bildetittel</string>
    <string name="BekreftSlett">Bekreft for å slette følgende utfall/twist</string>
    <string name="Slett">Slett</string>
    <string name="legg_til_lek">Skriv inn navn på lek</string>
</resources>
