<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nyLekFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/EditLekNavn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/legg_til_lek"
        android:inputType=""
        android:textSize="20sp" />

    <EditText
        android:id="@+id/EditLekBeskrivelse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/legg_til_beskrivelse"
        android:inputType=""
        android:textSize="20sp" />

    <Button
        android:id="@+id/LagreLek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lagre" />

    <Button
        android:id="@+id/Tilbake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tilbake" />

</LinearLayout>