<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NyTwistFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/legg_til_navn"
        android:inputType="" />

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/legg_til_beskrivelse"
        android:inputType="" />

    <Button
        android:id="@+id/LagreTwist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lagreTwist" />


</LinearLayout>