<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndreLeggTil"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/leggTilTwist"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/legg_til_twist"
        app:layout_constraintEnd_toStartOf="@+id/endreTwist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endreTwist"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/endre_twist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leggTilTwist"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fjernTwist"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:text="@string/fjern_twist"
        app:layout_constraintEnd_toStartOf="@+id/leggTilBilde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leggTilTwist" />

    <Button
        android:id="@+id/leggTilBilde"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:text="@string/legg_til_bilde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fjernTwist"
        app:layout_constraintTop_toBottomOf="@+id/endreTwist" />
</android.support.constraint.ConstraintLayout>